[tool.poetry]
name = "flet-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "flet_test"}]

[tool.poetry.dependencies]
python = "^3.11"
flet = "^0.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
